# ros2_course

./: .gitignore
TASK_6/: wall_follower_path.csv
TASK_6/src/gazebo_controller_pkg/: package.xml  setup.cfg  setup.py
TASK_6/src/gazebo_controller_pkg/gazebo_controller_pkg/: wall_follower.py
TASK_7/src/hm7_slam_pkg/: CMakeLists.txt  package.xml
TASK_7/src/hm7_slam_pkg/hm7_slam_pkg/: slam_node.py  wall_follower.py
TASK_7/src/hm7_slam_pkg/worlds/: custom_maze.world
hw_1/my_robot_pkg/my_robot_pkg/: sensor_publisher.py  sensor_subscriber.py
hw_4/my_robot_pkg/: CMakeLists.txt  package.xml  setup.py
hw_4/my_robot_pkg/include/: publisher.py  subscriber.py
hw_5/my_robot_pkg/: CMakeLists.txt  package.xml  setup.py
hw_5/my_robot_pkg/include/: client.py  server.py
hw_5/my_robot_pkg/srv/: SpawnTurtle.srv
